# xeno-crm

./: .env.example  .gitignore  07-FIX-BRIEF.md  DEPLOY.md  PROGRESS.md  README.md  TRADEOFFS.md  docker-compose.prod.yml  docker-compose.yml  setup.sh
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  README.md  __probe.ts  __probe2.ts  __probe3.ts  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: index.ts
backend/src/lib/: analytics.ts  attribution.ts  campaign-launcher.test.ts  campaign-launcher.ts  ingest-schemas.test.ts  ingest-schemas.ts  redis.ts  segments.test.ts  segments.ts
backend/src/routes/: agent.ts  analytics.ts  campaigns.ts  customers.ts  insights.ts  orders.partition.test.ts  orders.ts  receipts.ts  segments.ts  stats.ts
backend/src/worker/: poller.ts
backend/tests/: campaign-launcher.test.ts  ingest-schemas.test.ts  orders.partition.test.ts  receiptRank.test.ts  segments.test.ts
channel-service/: Cargo.toml  Dockerfile
channel-service/src/: main.rs
docs/: 00-OVERVIEW.md  01-STACK.md  02-DATA-MODEL.md  03-SEND-RECEIPT-LOOP.md  04-AI-AGENT-LAYER.md  05-BUILD-PLAN.md  06-VERIFICATION.md  07-INGESTION.md  ARCHITECTURE.md  TRADEOFFS.md  xeno-postman-collection.json
frontend/: Dockerfile  README.md  components.json  next.config.mjs  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/remotion/: Root.tsx  XenoIntro.tsx
frontend/scripts/: gen-assets.mjs
frontend/src/app/: globals.css  layout.tsx  (+1 more)
(+48 files in other folders)
